scripts/nullness/original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8.txt
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/RendererTask.java:80: error: [return] incompatible types in return.
		return chosenOne;
		       ^
  type of expression: @Initialized @Nullable Form
  method return type: @Initialized @NonNull Form
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/model/Form.java:16: error: [initialization.fields.uninitialized] the constructor does not initialize fields: name
	public Form(float a, float b, float c, float d, float e, float f, float weight, Color color) {
	       ^
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/model/Form.java:28: error: [initialization.fields.uninitialized] the constructor does not initialize fields: name
	public Form(Triangle triangle, float weight, Color color) {
	       ^
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/model/Form.java:29: error: [method.invocation] call to setByTriangle(fr.noxx90.jflam.model.Triangle) not allowed on the given receiver.
		setByTriangle(triangle);
		             ^
  found   : @UnderInitialization @NonNull Form
  required: @Initialized @NonNull Form
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/DefaultHistogramRenderer.java:21: error: [initialization.field.uninitialized] the default constructor does not initialize field rangeMap
	protected RangeMap<Float, Form> rangeMap;
	                                ^
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/DefaultHistogramRenderer.java:136: error: [return] incompatible types in return.
		return chosenOne;
		       ^
  type of expression: @Initialized @Nullable Form
  method return type: @Initialized @NonNull Form
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/gui/JFlamGui.java:12: error: [assignment] incompatible types in assignment.
	private Window window = null;
	                        ^
  found   : null (NullType)
  required: @Initialized @NonNull Window
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/FlameLogger.java:15: error: [initialization.fields.uninitialized] the constructor does not initialize fields: writer
	public FlameLogger() {
	       ^
../original/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/JFlamMain.java:67: error: [argument] incompatible argument for parameter arg3 of Graphics.drawImage.
				g.drawImage(image, 0, 0, null);
				                         ^
  found   : null (NullType)
  required: @Initialized @NonNull ImageObserver
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
9 errors
